--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:pN4EbCr0nlfrlx4uXMRR3NpQ0KcO2CTu9k0u3/AA3ag=
+APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 APP_PORT=8080
